--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "inquirer": "^9.2.7"
   },
   "devDependencies": {
-    "@types/inquirer": "^9.0.3"
+    "@types/inquirer": "^9.0.3",
+    "@types/node": "^20.4.0"
   }
 }
